# RedCraft

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Game.cpp  Makefile  README.md  build.sh  cmake_install.cmake  compile_commands.json  perlin.py  test.c++  test.html
.cache/clangd/index/: Game.cpp.68925CFC1B0186BC.idx  Game.hpp.4594C2BDB5C92A44.idx  Voxelium.cpp.0B2DDE0A2A995699.idx  Voxelium.hpp.D0750A891ECE1240.idx  gui.cpp.00553E9601C97B62.idx  gui.hpp.61F93939B8BE2B96.idx  logging.cpp.DC7EA638D01BD27E.idx  logging.hpp.B89BAD5BE68067EC.idx  main.cpp.A157CB206D56A4C4.idx  menu.cpp.C50F4E178F2FE2D6.idx  menu.hpp.1B81B9C212A203C6.idx  settings.cpp.7F179F42BE905B1E.idx
src/: Game.cpp  Game.hpp  Voxelium.cpp  Voxelium.hpp  constants.hpp  gameCreator.cpp  gameCreator.hpp  gui.hpp  inventory.cpp  inventory.hpp  items.hpp  loading.cpp  logging.cpp  logging.hpp  main.cpp  menu.cpp  menu.hpp  perlinNoise.cpp  settings.hpp
src/blocks/: Voxel.hpp  grass.hpp  stone.hpp  water.hpp
src/core/: Game.cpp  Game.hpp  Voxelium.cpp  Voxelium.hpp  gameCreator.cpp  gameCreator.hpp  worldGen.cpp  worldGen.hpp
src/gui/: chat.cpp  chat.hpp  gui.cpp  gui.hpp  input.cpp  input.hpp  inventory.cpp  inventory.hpp  loading.cpp  loading.hpp  menu.cpp  menu.hpp  player.hpp  server.cpp  server.hpp
src/resources/: textures.cpp  textures.hpp
src/utils/: client.cpp  client.hpp  discord.hpp  logging.cpp  logging.hpp  settings.cpp  settings.hpp
